<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.example.android.bookshop.MainActivity">


<RelativeLayout
    android:layout_gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"

   >

    <TextView
        android:id="@+id/book_shop_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txt_about"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/elsharkawy_book_shop"
        android:textColor="#c8924d"
        android:textSize="27sp"
        android:textStyle="italic|bold" />

    <ImageView
        android:id="@+id/Logo_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignStart="@+id/book_shop_name"
        android:layout_below="@+id/book_shop_name"
        android:contentDescription="@string/book_shop_image"
        android:paddingTop="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/book_shop" />

    <TextView
        android:id="@+id/edit_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Logo_image"
        android:text="@string/about"
        android:textColor="#c8924d"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_about"
        android:layout_toEndOf="@+id/edit_about"
        android:text="@string/aboutshop"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/edit_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_about"
        android:text="@string/address"
        android:textColor="#c8924d"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_about"
        android:layout_below="@+id/edit_address"
        android:text="@string/qutor_tanta_egypt"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/edit_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edit_address"
        android:layout_below="@+id/txt_address"
        android:text="@string/contact_info"
        android:textColor="#c8924d"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_address"
        android:layout_below="@+id/edit_contact"
        android:text="@string/phone_20_1159759468"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_phone"
        android:layout_below="@+id/txt_phone"
        android:text="@string/website_www_bookshop_com"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_work_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_email"
        android:text="@string/shop_open_all_days_except_friday"
        android:textColor="#c8924d"
        android:textSize="23sp"
        android:textStyle="bold" />

</RelativeLayout>
</ScrollView>